1998-06-16  Alex Lancaster  <alex@santafe.edu>

	* NEWS:  Added 'Release Notes for 1.2'.

1998-06-16  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* acprogs.m4: New file.

	* configure.in: Check for dvips, pngtopnm, pnmtops, and cjpeg.
	Iterate over emacs, jade, jadetex, dvips, pngtopnm, pnmtops, and cjpeg
	ensuring there are not missing.  Call md_PROG_GS.

1998-06-15  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* configure.in: Check for emacs, jade, jadetex, and dvips.
	Abort if any are missing.

	* Makefile.rules (JADE): Substitute JADE, JADETEX, and DVIPS.
	Remove revhistory rules (now in Makefile.common).

	* Makefile.am (EXTRA_DIST): New variable.  Enumerate toplevel
	elisp, dsl, included makefiles, global.ent and docbook.dcl.

	* Makefile.common: New file.

1998-06-15  Alex Lancaster  <alex@santafe.edu>

	* catalog.in: Removed PUBLIC identifier for "Installing Preface" -
	no longer used.

1998-06-13  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* print.dsl (example-title, example-entry-text, make-list, 
	make-listitem): New functions.

	* html.dsl (book): Redefine to run the lot generation
	code (that is disabled in DocBook itself).
	(example-title, example-entry-text, $lot-entry$, lot-title,
	make-list, make-listitem): New functions.

	* common.dsl (example-text, title): Remove.
	(example-entry): Pass match-protocol instead of last-node. 
	When match-protocol is set, an example-node must be
	labeled with match-protocol.
	(collect-example-protocols, uniqify, extract-module-list, 
	filter-protocols, lots-for-protocol): New functions.
	(build-lot): Most of previous contents moved into lots-for-protocol.
	Example table now built by iterating over the modules and 
	protocols (instead of tracking changes in the label).

1998-06-12  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* print.dsl ($img$): Strip off <OSFILE>, but leave path.  Insert
	1/2 inch of space after title and scale slightly different X/Y to
	avoid problems with jadetex.